Bug 291641 - emptying folder content doesn't update statusbar
Summary: emptying folder content doesn't update statusbar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-16 09:39 UTC by Pascal d'Hermilly
Modified: 2012-04-27 19:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2012-01-16 09:39:25 UTC
Version:           2.0 (using Devel) 
OS:                Linux

If you enter an empty folder from a parent folder, the status bar will still list the parents contenst, e.g. "7 folders, 32 files (1,7MiB)"

Reproducible: Always

Steps to Reproduce:
Create a new folder folder
enter it by clicking on it.

Actual Results:  
Status bar says the same as the parents folder.

Expected Results:  
status bar says "Empty folder".

OS: Linux (x86_64) release 3.0.0-14-generic
Compiler: gcc
Comment 1 Gabriel Trisca 2012-03-11 05:23:36 UTC
Still present in 4.8.1 (kubuntu package 4:4.8.1-0ubuntu1~oneiric1~ppa1)
Comment 2 Peter Penz 2012-04-11 20:22:11 UTC
Git commit 0b88a7cbbd7fef539616b1e615e17f366fde01c7 by Peter Penz.
Committed on 11/04/2012 at 22:20.
Pushed by ppenz into branch 'master'.

Fix outdated statusbar message when entering an empty folder
FIXED-IN: 4.9.0

M  +2    -0    dolphin/src/views/dolphinview.cpp

http://commits.kde.org/kde-baseapps/0b88a7cbbd7fef539616b1e615e17f366fde01c7
Comment 3 Hussam Al-Tayeb 2012-04-27 16:52:59 UTC
Can this make 4.8 branch as well? Thank you :)
Comment 4 Peter Penz 2012-04-27 19:25:13 UTC
Sadly no, as no new messages are allowed for the bugfix-branch (and I'd consider this issue not serious enough to justify an exception for the message-freeze).
Comment 5 Hussam Al-Tayeb 2012-04-27 19:34:20 UTC
alright :)