Fix outdated statusbar message when entering an empty folder

BUG: 291641
FIXED-IN: 4.9.0